<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
android:orientation="vertical" android:layout_width="match_parent"
android:layout_height="match_parent"
    android:weightSum="7"
    android:background="@color/light_gray">
    <TextView
        android:layout_height="0dp"
        android:layout_width="match_parent"
        android:layout_weight="2"
        android:text="@string/insert_pin"
        android:textSize="30sp"
        android:textAlignment="center"
        android:gravity="center"
        />

    <LinearLayout
        android:layout_height="0dp"
        android:layout_width="match_parent"
        android:layout_weight="5"
        android:weightSum="5"
        android:orientation="vertical">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:orientation="horizontal"
            android:weightSum="4"
            android:gravity="center">

            <EditText
                android:id="@+id/passwordLine"
                android:layout_height="wrap_content"
                android:layout_width="0dp"
                android:inputType="numberPassword"
                android:layout_weight="3"
                android:layout_marginLeft="15dp"
                android:layout_marginStart="15dp"
                android:textAlignment="center"
                android:textSize="30sp"
                android:maxLength="8"
                android:enabled="false"
                android:textIsSelectable="false"
                />

            <ImageButton
                android:id="@+id/deleteButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:src="@android:drawable/ic_input_delete"
                android:background="@android:color/transparent"
                />

        </LinearLayout>

        <GridLayout
            android:id="@+id/buttonLayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:columnCount="3"
            android:layout_gravity="center"
            android:orientation="horizontal"
            android:layout_marginTop="25dp"
            >
            <Button
                android:id="@+id/button1"
                android:layout_row="0"
                android:layout_column="0"
                android:text="1"/>

            <Button android:text="2"
                android:layout_row="0"
                android:layout_column="1"
                android:id="@+id/button2"/>

            <Button android:text="3"
                android:layout_row="0"
                android:layout_column="2"
                android:id="@+id/button3"/>

            <Button android:text="4"
                android:layout_row="1"
                android:layout_column="0"
                android:id="@+id/button4"/>

            <Button android:text="5"
                android:layout_row="1"
                android:layout_column="1"
                android:id="@+id/button5"/>

            <Button android:text="6"
                android:layout_row="1"
                android:layout_column="2"
                android:id="@+id/button6"/>

            <Button android:text="7"
                android:layout_row="2"
                android:layout_column="0"
                android:id="@+id/button7"/>

            <Button android:text="8"
                android:layout_row="2"
                android:layout_column="1"
                android:id="@+id/button8"/>

            <Button android:text="9"
                android:layout_row="2"
                android:layout_column="2"
                android:id="@+id/button9"/>

            <Button
                android:text="0"
                android:layout_column="1"
                android:layout_row="3"
                android:id="@+id/button10"/>

            <Button
                android:layout_row="3"
                android:layout_column="2"
                android:id="@+id/acceptButton"
                android:text="OK"/>
        </GridLayout>


    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_weight="1"
        android:layout_gravity="center"
        android:gravity="center"
        android:visibility="invisible">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/your_code"
            android:layout_marginRight="5dp"/>

        <TextView
            android:id="@+id/randomCodeText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="4242"/>

    </LinearLayout>


</LinearLayout>