<resources>
    <string name="app_name">Dynamic Layout Prototype</string>
    <string name="insert_pin">Please insert your PIN code</string>
    <string name="your_code">Your code: </string>
    <string name="code_accepted">The code is right</string>
    <string name="code_accepted_test_mode">The code is right, you have done %1$d out of %2$d</string>
    <string name="code_incorrect">Incorrect code, %d tries remaining</string>
    <string name="code_incorrect_test_mode">Incorrect code</string>
    <string name="dif_change">Difficulty change</string>
    <string name="cancel">Cancel</string>
    <string name="attention_dialog_disclaimer">In the next minutes the application will test how fast you can write the random code in 10 times. Are you ready?</string>
    <string name="attention_dialog_title">ATTENTION!</string>
    <string name="title_activity_test_result">TestResultActivity</string>
    <string name="diff_key">difficulty</string>
    <string name="comp_time_sec_key">sec completion time</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_settings">Settings</string>
    <string name="difficulty_array_default">EASY</string>
    <string name="layout_array_default">numeric</string>
    <string name="started_by_br">wasStartedByBroadcastReceiver</string>

</resources>
